kubernetes-manifests/02-pwdns-as-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-clients-as
  namespace: powerdns-clients-<ENV_ROLE>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerdns-clients-as
  template:
    metadata:
      labels:
        app: powerdns-clients-as
    spec:
      volumes:
        - name: sqlite3-db
          nfs:
            server: xxx.xxx.xxx.xxx
            path: /mnt/powerdns-clients-<ENV_ROLE>/
            readOnly: false
        - name: powerdns-clients-as
          configMap:
            name: powerdns-clients-as
            defaultMode: 420
      containers:
        - name: powerdns-clients-as
          image: powerdns/pdns-auth-49:4.9.4
          ports:
            - containerPort: 5353
              protocol: UDP
            - containerPort: 5353
              protocol: TCP
            - containerPort: 8081 # webserver endpoint
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /var/lib/powerdns/
            name: sqlite3-db
            subPath: var-lib
          - mountPath: /etc/powerdns/pdns.d/pdns.conf
            name: powerdns-clients-as
            subPath: pdns.conf
      restartPolicy: Always
      terminationGracePeriodSeconds: 0
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
