kubernetes-manifests/02-pwdns-dist-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-clients-dist
  namespace: powerdns-clients-<ENV_ROLE>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerdns-clients-dist
  template:
    metadata:
      labels:
        app: powerdns-clients-dist
    spec:
      volumes:
        - name: powerdns-clients-dist
          configMap:
            name: powerdns-clients-dist
            defaultMode: 420
      containers:
        - name: powerdns-clients-dist
          image: powerdns/dnsdist-19:1.9.8
          ports:
            - containerPort: 5353
              protocol: UDP
            - containerPort: 5353
              protocol: TCP
            - containerPort: 8083 # webserver endpoint
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /etc/dnsdist/conf.d/dnsdist.conf
            name: powerdns-clients-dist
            subPath: dnsdist.conf
      restartPolicy: Always
      terminationGracePeriodSeconds: 0
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
