kubernetes-manifests/02-pwdns-res-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns-clients-res
  namespace: powerdns-clients-<ENV_ROLE>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: powerdns-clients-res
  template:
    metadata:
      labels:
        app: powerdns-clients-res
    spec:
      volumes:
        - name: powerdns-clients-res
          configMap:
            name: powerdns-clients-res
            defaultMode: 420
      containers:
        - name: powerdns-clients-res
          image: powerdns/pdns-recursor-49:4.9.9
          ports:
            - containerPort: 5353
              protocol: UDP
            - containerPort: 5353
              protocol: TCP
            - containerPort: 8082 # webserver endpoint
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - mountPath: /etc/powerdns/recursor.d/recursor.conf
            name: powerdns-clients-res
            subPath: recursor.conf
      restartPolicy: Always
      terminationGracePeriodSeconds: 0
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
