kubernetes-manifests/03-pwdns-as-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: powerdns-clients-as
  namespace: powerdns-clients-<ENV_ROLE>
  labels:
    app: powerdns-clients-as
spec:
  ports:
    - name: pwds-as-udp
      protocol: UDP
      port: 53
      targetPort: 5353
    - name: pwds-as-tcp
      protocol: UDP
      port: 53
      targetPort: 5353
  selector:
    app: powerdns-clients-as
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns-clients-as-gui
  namespace: powerdns-clients-<ENV_ROLE>
  labels:
    app: powerdns-clients-as
spec:
  ports:
    - name: pwds-as-web
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: powerdns-clients-as
  type: ClusterIP
  sessionAffinity: None
