kubernetes-manifests/04-pwdns-dist-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: powerdns-clients-dist
  namespace: powerdns-clients-<ENV_ROLE>
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    cert-manager.io/common-name: pwdns-dist.<ENV_ROLE>.somedomain.io
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pwdns-dist.<ENV_ROLE>.somedomain.io
      secretName: pwdns-dist-tls-<ENV_ROLE>
  rules:
  - host: pwdns-dist.<ENV_ROLE>.somedomain.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: powerdns-clients-dist-gui
            port:
              number: 8083
---
